# ChangeLog for dev-perl/XML-LibXSLT
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-LibXSLT/ChangeLog,v 1.63 2008/11/21 09:43:13 tove Exp $

*XML-LibXSLT-1.68 (21 Nov 2008)

  21 Nov 2008; Torsten Veller <tove@gentoo.org> +XML-LibXSLT-1.68.ebuild:
  Version bump

  02 Aug 2008; Torsten Veller <tove@gentoo.org> -XML-LibXSLT-1.53.ebuild,
  -XML-LibXSLT-1.58.ebuild, -XML-LibXSLT-1.60.ebuild,
  -XML-LibXSLT-1.61.ebuild:
  Cleanup

  02 Aug 2008; Torsten Veller <tove@gentoo.org> XML-LibXSLT-1.66.ebuild:
  Depends on >=dev-perl/XML-LibXML-1.66 (#233701)

  18 Jul 2008; Raúl Porcel <armin76@gentoo.org> XML-LibXSLT-1.66.ebuild:
  alpha/ia64/sparc/x86 stable

*XML-LibXSLT-1.66 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +XML-LibXSLT-1.66.ebuild:
  Version bump

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  XML-LibXSLT-1.62.ebuild:
  ppc stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> XML-LibXSLT-1.62.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> XML-LibXSLT-1.62.ebuild:
  Stable on x86, bug #169152.

  03 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  XML-LibXSLT-1.62.ebuild:
  Stable on amd64

  26 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  XML-LibXSLT-1.62.ebuild:
  Keywording ~mips, tested on swarm

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  XML-LibXSLT-1.62.ebuild:
  Stable on Alpha + IA64.

  21 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  XML-LibXSLT-1.62.ebuild:
  Marking sparc stable

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  XML-LibXSLT-1.53.ebuild, XML-LibXSLT-1.58.ebuild, XML-LibXSLT-1.60.ebuild,
  XML-LibXSLT-1.61.ebuild, XML-LibXSLT-1.62.ebuild:
  Ebuild maintenance

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  XML-LibXSLT-1.61.ebuild:
  Stable on ppc.

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  XML-LibXSLT-1.61.ebuild:
  sparc stable
