@@ -1,8 +1,10 @@
 DIST XML-LibXSLT-1.62.tar.gz 39537 RMD160 e76a0fec9eebd7cf4c698b75887e09a7436eb1c2 SHA1 b23be30b75d2d287f78093712d066b199f9b01fb SHA256 6809cad7c373236eba37aaf59051318021ee4fd627254f16afdd1527fe417947
 DIST XML-LibXSLT-1.66.tar.gz 76829 RMD160 8c349035f01e6b72e8c11dc72852d01808e5ae46 SHA1 f88885307da7a06f3404eb35699b4e22444efcfd SHA256 094c4efb8e4bea5ce02dffe82c753ec4d16d9c37109b8d7847707fe785e95dc3
 DIST XML-LibXSLT-1.68.tar.gz 77213 RMD160 6e7f4c68b89f2e11ee3dcb4f3ad400ffe45b0a33 SHA1 0979b595d178f2c14d9134eb7fe35cb3a0a38115 SHA256 60b28e5bf4a514717c2e9b62e00e774becb9e1e89b4a4fab6462bec0bcfac843
+DIST XML-LibXSLT-1.70.tar.gz 80405 RMD160 d893da65d092310d209fcd19e07f0f2deed14b65 SHA1 15cb3404fd3c6d12e4b800d13a7e7dd819eb235c SHA256 37b927a80f9f70ab5d6037e678817eeb519c79869ac86f14e70f76933bc51475
 EBUILD XML-LibXSLT-1.62.ebuild 615 RMD160 c2328af646238049d0f1c39ff1f115cb5f24ab06 SHA1 a9bcbc32263eca0157ab7fcb278e6a061611b01a SHA256 854bb9054402b8552c5b2c4b751b977873c895cc351a5b8f6f8fbd4e2bf70039
 EBUILD XML-LibXSLT-1.66.ebuild 609 RMD160 1bef310f9b02c4e6d52744c2846299f4c04e81cf SHA1 9fd119b0ba18add664cc62481256d600fdef2905 SHA256 b6d36302c963d726150a7da89edd94bc0935a24561d05991aa3a01848fed0924
 EBUILD XML-LibXSLT-1.68.ebuild 542 RMD160 8790ce69ad53235671cac0226eed9b9ee50f327d SHA1 397cc32558a006bcb75b977df03a18783789968b SHA256 0d727c6b9760ceb90f661eb5fccca24c9e184a7728bf9eac5e1a160f545b5d08
-MISC ChangeLog 7584 RMD160 820d4e2a94c5d0cbd3e867097658b4f84bfd6cec SHA1 ca5982f6c0c34aa5ef53cda27bff45190b98abff SHA256 f4249d92374fc09593e3a47200f610af4bbd5cc2148efe537546f79e37fe174a
+EBUILD XML-LibXSLT-1.70.ebuild 544 RMD160 7b793872d36c402e8110e54816b007563430bdad SHA1 59d2964a43376438dc3b6214fd7b8b02f800062e SHA256 3d8d7ff657127f0b94d4a06ce6986ff2ecb5ff2e46ee196491efb3f6f8fe4117
+MISC ChangeLog 7707 RMD160 ea8d0ff87f170917b7e252b0a0e353392d600e2b SHA1 f9e9c9cd1a319e3e807706be621fd554ae88a972 SHA256 f2e3a8705b0d8877afa2e08be57d676cfcffdeb5a518653ad1b4b7085e97538f
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
